syntax = "proto3";

option go_package = "";
option java_multiple_files = true;
option java_package = "io.grpc.test.identity";
option java_outer_classname = "TestProto";
option objc_class_prefix = "RTG";

package identity;

// Interface exported by the server.
service IdentityPB {
  rpc retrieve (RetrieveRequest) returns (RetrieveReply) {}
}

message RetrieveRequest {
  string id = 1;
}

message RetrieveReply {
  string phone_number = 1;
}

message Identity {
  string phone_number = 1;
}