syntax = "proto3";

option go_package = "service/event";
option java_multiple_files = true;
option java_package = "io.grpc.test.event";
option java_outer_classname = "TestProto";
option objc_class_prefix = "RTG";

package event;

// Interface exported by the server.
service Event {
  rpc create (CreateRequest) returns (CreateReply) {}
}
message CreateRequest {
  string process_id = 1;
  bytes data = 2;
}
message CreateReply {
  string id = 1;
}